--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/scripts.js" defer></script>
     <title>Projeto 01</title>
 </head>
 <body>
@@ -35,19 +36,19 @@
                 </div>
                 <div class="inserir">
                     <h2>Mensagem</h2>
-                    <textarea placeholder="Digite seu texto"></textarea>
+                    <textarea id="mensagem" placeholder="Digite seu texto"></textarea>
                 </div>
             </div>
 
             <div class="Countedo_MainRigth">
                 <div>
                     <h2>Resultado</h2>
-                    <textarea></textarea>
+                    <textarea id="criptografado"></textarea>
                 </div>
             </div>
             
             <div class="send">
-                <button>Criptografar</button>
+                <button id="criptografar">Criptografar</button>
             </div>
 
         </section>
