Adicionado nova função JS

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             
             <div class="send">
                 <button id="criptografar">Criptografar</button>
+                <button id="descriptografar">Descriptografar</button>
             </div>
 
         </section>
